docs(settings): add swagger docs
